5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1834_1277.log
== SUBMITION (2019-07-01 21:22:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

i = int(input("i: "))
j = int(input("j: "))

tab = array([[0, 2, 11, 6, 15, 11, 1],
				 [2, 0, 7, 12, 4, 2, 15],
				 [11, 7, 0, 11, 0, 10, 2, 1],
				 [15, 4, 8, 10, 0, 5, 13],
				 [11, 2, 3, 2, 5, 0, 14],
				 [1, 15, 13, 1, 13, 14, 0]])

k = tab[(b//100)-1,(a//100)-1]
print(k)
-- EXECUTION TIME:
1.12663
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1277/main.py", line 14, in <module>
    k = tab[(b//100)-1,(a//100)-1]
NameError: name 'b' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:22:59) 
-- CODE:
from numpy import *
from numpy.linalg import *

i = int(input("i: "))
j = int(input("j: "))

tab = array([[0, 2, 11, 6, 15, 11, 1],
				 [2, 0, 7, 12, 4, 2, 15],
				 [11, 7, 0, 11, 0, 10, 2, 1],
				 [15, 4, 8, 10, 0, 5, 13],
				 [11, 2, 3, 2, 5, 0, 14],
				 [1, 15, 13, 1, 13, 14, 0]])

k = tab[(j//100)-1,(i//100)-1]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:23:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

i = int(input("i: "))
j = int(input("j: "))

tab = array([[0, 2, 11, 6, 15, 11, 1],
				 [2, 0, 7, 12, 4, 2, 15],
				 [11, 7, 0, 11, 0, 10, 2, 1],
				 [15, 4, 8, 10, 0, 5, 13],
				 [11, 2, 3, 2, 5, 0, 14],
				 [1, 15, 13, 1, 13, 14, 0]])

k = tab[(j//100)-1,(i//100)-1]
print(k)
-- EXECUTION TIME:
1.04482
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1277/main.py", line 14, in <module>
    k = tab[(j//100)-1,(i//100)-1]
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:23:35) 
-- CODE:
from numpy import *
from numpy.linalg import *

i = int(input("i: "))
j = int(input("j: "))

tab = array([[0, 2, 11, 6, 15, 11, 1],
				 [2, 0, 7, 12, 4, 2, 45],
				 [11, 7, 0, 11, 0, 10, 2, 1],
				 [15, 4, 8, 10, 0, 5, 13],
				 [11, 2, 3, 2, 5, 0, 14],
				 [1, 15, 13, 1, 13, 14, 0]])

k = tab[(j//100)-1,(i//100)-1]
print(k)
-- EXECUTION TIME:
0.927167
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1277/main.py", line 14, in <module>
    k = tab[(j//100)-1,(i//100)-1]
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:24:35) 
-- CODE:
from numpy import *
from numpy.linalg import *

i = int(input("i: "))
j = int(input("j: "))

tab = array([[0, 2, 11, 6, 15, 11, 1],
				 [2, 0, 7, 12, 4, 2, 45],
				 [11, 7, 0, 11, 8, 3, 13],
				 [6,12,11,0,10,2,1],
				 [15, 4, 8, 10, 0, 5, 13],
				 [11, 2, 3, 2, 5, 0, 14],
				 [1, 15, 13, 1, 13, 14, 0]])

k = tab[(j//100)-1,(i//100)-1]
print(k)
-- EXECUTION TIME:
0.809058
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:29:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

i = int(input("i: "))
j = int(input("j: "))

tab = array([[0, 2, 11, 6, 15, 11, 1],
				 [2, 0, 7, 12, 4, 2, 45],
				 [11, 7, 0, 11, 8, 3, 13],
				 [6,12,11,0,10,2,1],
				 [15, 4, 8, 10, 0, 5, 13],
				 [11, 2, 3, 2, 5, 0, 14],
				 [1, 15, 13, 1, 13, 14, 0]])

k = tab[(j//100)-1,(i//100)-1]
print(k)
-- EXECUTION TIME:
0.86919
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:29:29) 
-- CODE:
from numpy import *
from numpy.linalg import *

i = int(input("i: "))
j = int(input("j: "))

tab = array([[0, 2, 11, 6, 15, 11, 1],
				 [2, 0, 7, 12, 4, 2, 15],
				 [11, 7, 0, 11, 8, 3, 13],
				 [6,12,11,0,10,2,1],
				 [15, 4, 8, 10, 0, 5, 13],
				 [11, 2, 3, 2, 5, 0, 14],
				 [1, 15, 13, 1, 13, 14, 0]])

k = tab[(j//100)-1,(i//100)-1]
print(k)
-- EXECUTION TIME:
1.08308
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
i: j: 15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
i: j: 13
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:29:36) 
-- CODE:
from numpy import *
from numpy.linalg import *

i = int(input("i: "))
j = int(input("j: "))

tab = array([[0, 2, 11, 6, 15, 11, 1],
				 [2, 0, 7, 12, 4, 2, 45],
				 [11, 7, 0, 11, 8, 3, 13],
				 [6,12,11,0,10,2,1],
				 [15, 4, 8, 10, 0, 5, 13],
				 [11, 2, 3, 2, 5, 0, 14],
				 [1, 15, 13, 1, 13, 14, 0]])

k = tab[(j//100)-1,(i//100)-1]
print(k)
-- EXECUTION TIME:
1.33419
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:41:36) 
-- CODE:
from numpy import *
from numpy.linalg import *

i = int(input("i: "))
j = int(input("j: "))

tab = array([[0, 2, 11, 6, 15, 11, 1],
				 [2, 0, 7, 12, 4, 2, 45],
				 [11, 7, 0, 11, 8, 3, 13],
				 [6,12,11,0,10,2,1],
				 [15, 4, 8, 10, 0, 5, 13],
				 [11, 2, 3, 2, 5, 0, 14],
				 [1, 15, 13, 1, 13, 14, 0]])

k = tab[(j//100)-1,(i//100)-1]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:41:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

i = int(input("i: "))
j = int(input("j: "))

tab = array([[0, 2, 11, 6, 15, 11, 1],
				 [2, 0, 7, 12, 4, 2, 45],
				 [11, 7, 0, 11, 8, 3, 13],
				 [6,12,11,0,10,2,1],
				 [15, 4, 8, 10, 0, 5, 13],
				 [11, 2, 3, 2, 5, 0, 14],
				 [1, 15, 13, 1, 13, 14, 0]])

k = tab[(j//100)-1,(i//100)-1]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 15:41:58) 
-- CODE:
from numpy import *
from numpy.linalg import *

i = int(input("i: "))
j = int(input("j: "))

tab = array([[0, 2, 11, 6, 15, 11, 1],
				 [2, 0, 7, 12, 4, 2, 45],
				 [11, 7, 0, 11, 8, 3, 13],
				 [6,12,11,0,10,2,1],
				 [15, 4, 8, 10, 0, 5, 13],
				 [11, 2, 3, 2, 5, 0, 14],
				 [1, 15, 13, 1, 13, 14, 0]])

k = tab[(j//100)-1,(i//100)-1]
print(k)
-- EXECUTION TIME:
1.05072
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 15:42:46) 
-- CODE:
from numpy import *
from numpy.linalg import *

i = int(input("i: "))
j = int(input("j: "))

tab = array([[0, 2, 11, 6, 15, 11, 1],
				 [2, 0, 7, 12, 4, 2, 45],
				 [11, 7, 0, 11, 8, 3, 13],
				 [6,12,11,0,10,2,1],
				 [15, 4, 8, 10, 0, 5, 13],
				 [11, 2, 3, 2, 5, 0, 14],
				 [1, 15, 13, 1, 13, 14, 0]])

k = tab[(j//100)-1,(i//100)-1]
print(k)
-- EXECUTION TIME:
0.913344
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
i: j: 15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
i: j: 13
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 15:42:51) 
-- CODE:
from numpy import *
from numpy.linalg import *

i = int(input("i: "))
j = int(input("j: "))

tab = array([[0, 2, 11, 6, 15, 11, 1],
				 [2, 0, 7, 12, 4, 2, 45],
				 [11, 7, 0, 11, 8, 3, 13],
				 [6,12,11,0,10,2,1],
				 [15, 4, 8, 10, 0, 5, 13],
				 [11, 2, 3, 2, 5, 0, 14],
				 [1, 15, 13, 1, 13, 14, 0]])

k = tab[(j//100)-1,(i//100)-1]
print(k)
-- EXECUTION TIME:
0.89709
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 15:42:58) 
-- CODE:
from numpy import *
from numpy.linalg import *

i = int(input("i: "))
j = int(input("j: "))

tab = array([[0, 2, 11, 6, 15, 11, 1],
				 [2, 0, 7, 12, 4, 2, 15],
				 [11, 7, 0, 11, 8, 3, 13],
				 [6,12,11,0,10,2,1],
				 [15, 4, 8, 10, 0, 5, 13],
				 [11, 2, 3, 2, 5, 0, 14],
				 [1, 15, 13, 1, 13, 14, 0]])

k = tab[(j//100)-1,(i//100)-1]
print(k)
-- EXECUTION TIME:
0.986382
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 15:43:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

i = int(input("i: "))
j = int(input("j: "))

tab = array([[0, 2, 11, 6, 15, 11, 1],
				 [2, 0, 7, 12, 4, 2, 15],
				 [11, 7, 0, 11, 8, 3, 13],
				 [6,12,11,0,10,2,1],
				 [15, 4, 8, 10, 0, 5, 13],
				 [11, 2, 3, 2, 5, 0, 14],
				 [1, 15, 13, 1, 13, 14, 0]])

k = tab[(j//100)-1,(i//100)-1]
print(k)
-- EXECUTION TIME:
1.06038
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 15:43:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

i = int(input("i: "))
j = int(input("j: "))

tab = array([[0, 2, 11, 6, 15, 11, 1],
				 [2, 0, 7, 12, 4, 2, 15],
				 [11, 7, 0, 11, 8, 3, 13],
				 [6,12,11,0,10,2,1],
				 [15, 4, 8, 10, 0, 5, 13],
				 [11, 2, 3, 2, 5, 0, 14],
				 [1, 15, 13, 1, 13, 14, 0]])

k = tab[(j//100)-1,(i//100)-1]
print(k)
-- EXECUTION TIME:
1.22248
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
